--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,12 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>3.12</version>
+        <version>4.40</version>
         <relativePath />
     </parent>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <powermock.version>1.4.12</powermock.version>
-        <jenkins.version>2.60.3</jenkins.version>
-        <java.level>8</java.level>
+        <jenkins.version>2.332.2</jenkins.version>
         <changelist>999999-SNAPSHOT</changelist>
     </properties>
 
@@ -61,16 +58,20 @@
             <artifactId>commons-digester3</artifactId>
             <version>3.2</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>job-dsl</artifactId>
-            <version>1.38</version>
+            <version>1.79</version>
             <optional>true</optional>
             <exclusions>
                 <exclusion>
                     <groupId>org.codehaus.groovy</groupId>
                     <artifactId>groovy-all</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jenkins-ci</groupId>
+                    <artifactId>symbol-annotation</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -80,18 +81,6 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
@@ -99,25 +88,9 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.4.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>annotations</artifactId>
-            <version>3.0.1</version>
+            <version>2.13.2</version>
         </dependency>
     </dependencies>
-
-     <!--
-         We need to have this section because maven.jenkins-ci.org now uses a new
-         url. We rely on older Jenkins version so this needs to be overridden.
-     -->
-     <distributionManagement>
-        <repository>
-            <id>maven.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/releases</url>
-        </repository>
-     </distributionManagement>
 
     <scm>
         <connection>scm:git:https://github.com/jenkinsci/clearcase-ucm-plugin</connection>
